css/dark/style.css
/* ... */
.stock-icon {
    width: 30px;
    height: 30px;
}

input, select {
    border-radius: 4px;
    padding: 1px 2px;
    margin-bottom: 1px;
    font-size: 13px;
}

    input[type=number] {
        width: 5em;
    }

.mod-select {
    min-width: 90px;
}

.header-link {
    color: white;
}

    .header-link:hover {
        color: white;
    }

.select-link {
    color: blue;
}

.cur-link {
    color: white;
    cursor: pointer;
}

.hide-link {
    color: white;
    font-style: normal;
    text-decoration: none;
}

    .hide-link:hover {
        color: white;
        font-style: normal;
        text-decoration: none;
    }

table, td, tr {
    padding: 1px;
}

.header-table {
    border: unset;
    padding: 4px;
    border-collapse: collapse;
}

.footer-table {
    border: unset;
    padding: 4px;
    border-collapse: collapse;
}

.footer-table-center {
    border: unset;
    padding: 4px;
    border-right: 1px solid black;
}

.footer-table-left {
    border: unset;
    padding: 4px;
    border-right: 1px solid black;
}

.footer-table-right {
    border: unset;
    padding: 4px;
    border-left: 1px solid black;
}

.header {
    position: relative;
    right: 0;
    top: 0;
    left: 0;
    border-bottom: 1px solid black;
    width: 100%;
    padding: 10px 0 10px 0;
    height: auto;
    text-align: left;
    display: inline-block;
    background: #FFFFFF;
    color: black;
    padding-bottom: 15px;
}

.footer {
    position: absolute;
    bottom: 0;
    right: 0;
    left: 0;
    border-top: 1px solid #aeaeae;
    width: 100%;
    padding: 3px 0 3px 0;
    height: auto;
    display: inline-block;
    font-size: 12px;
}

.header-image {
    width: 80px;
    height: 80px;
}

#header-icon {
    float: left;
    margin-left: 10px;
}

#header-text {
    float: left;
    display: inline-block;
}

#footer-text {
    display: inline-block;
    float: right;
    margin-right: 10px;
}

#github-profile {
    border-radius: 25px;
}

#header-right {
    clear: none;
    float: right;
    display:inline-block;
}

#links {
    margin-right: 20px;
    line-height: 20px;
    float: right;
}

#theme {
    clear: right;
    float: right;
    margin-right: 20px;
    line-height: 20px;
    margin-top: 15px;
}

#header-cont h3 {
    display: inline;
    margin-left: 10px;
    color: black;
}

.description {
    margin-left: 10px;
}

.header-links {
    position: relative;
    top: 5px;
    margin-left: 10px;
}

.attribute {
    padding: 4px;
}

.value {
    padding: 4px;
    text-align: center;
    width: 70%;
}

.param-value {
    padding: 4px;
    text-align: center;
    width: 25%;
}

.tag-value {
    padding: 4px;
    text-align: left;
    width: 25%;
}

.value-left {
    padding: 4px;
    text-align: left;
    width: 10%;
}

.value-match {
    padding: 4px;
    text-align: left;
    width: 100%;
    white-space: pre-wrap;
}

.value-even {
    background: #595959;
}

.pos-left {
    position: relative;
    top: 0;
    float: left;
}

.pos-right {
    position: relative;
    top: 0;
    float: right;
}

#filter {
    position: relative;
    top: 0;
    left: auto;
}

#scriptbox {
    font-size: 1rem;
    margin-top: 5px;
    width: 100%;
    height: 30em;
    color: white;
    font-family: 'Ubuntu Mono', monospace;
    background: #212121;
}

.hidden-box {
    position: absolute;
    left: -9999px;
}

.script-diff {
    font-family: 'Ubuntu Mono', monospace;
    float: left;
    width: 48%;
    display: block;
    padding-left: 5px;
    border-left: 1.3px solid black;
    clear: both;
    color: white;
}

.script-diff2 {
    font-family: 'Ubuntu Mono', monospace;
    float: right;
    width: 48%;
    display: block;
    padding-left: 5px;
    border-left: 1.3px solid black;
    color: white;
}

.header-select {
    background: #FFFFFF;
    color: #000000;
}

input, select {
    background: #2a2a2a;
    color: white;
    border-color: #212121;
}

    input[type=button] {
        border-color: #525252;
    }

.stick-container {
    width: 240px;
}

.stick-div {
    float: left;
}

.stick-values {
    float: right;
}

#calculator {
    position: relative;
    margin-top: 10px;
    /*margin-left:10px;*/
    font-size: 14px;
}

#main {
    position: relative;
    display: block;
    float: left;
    width: 50%;
}

#main2 {
    position: relative;
    display: block;
    width: 100%;
}

#main-scripts {
    position: relative;
    display: block;
    margin-left: 10px;
}

#main-params {
    position: relative;
    display: block;
    float: left;
    width: 29%;
    margin-left: 1%;
}

#results {
    position: relative;
    display: block;
    font-size: 15px;
    color: white;
    float: right;
    width: 50%;
}

#results2 {
    position: relative;
    display: block;
    font-size: 15px;
    color: white;
    width: 100%;
}

#results-params {
    position: relative;
    display: block;
    font-size: 15px;
    color: white;
    float: right;
    width: 70%;
}

.header-group {
    width: 99%;
    padding: 5px;
    margin-bottom: 5px;
}

.header-group-text {
    display: block;
    margin-left: 5px;
}

.group {
    width: 99%;
    margin-top: -12px;
}

.header-res {
    width: 99%;
    padding: 5px;
    float: right;
}

.group-res {
    width: 100%;
    margin-top: -12px;
}

#results-table {
    color: white;
    margin-left: 10%;
}

#extra-table {
    color: white;
    margin-left: 10%;
}

#attributes {
    position: relative;
    display: none;
}

#visualizer-settings {
    position: relative;
    display: none;
}

#result-table {
    width: 100%;
}

.luma {
    clear:both;
    float:right;
}

#vs {
    position: relative;
    float: right;
}

#visualizer {
}

#visualizerCanvas {
    left: 30px;
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
}

.auraParam {
    clear:both;
    float:left;
}

#shareurl{
    width:100%;
}

.char-select{
    float:left;
}

.percent-div{
    float:right;
    margin-left: 3px;
}

/*.data-labels{
    float:right;
}*/
/* ... */

